# arabic-repair

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/arabic_repair/: __init__.py  _repair.py
tests/: test_repair.py
