[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arabic-repair"
version = "0.1.0"
description = "Detect and repair visually-baked Arabic text from PDFs, OCR, and legacy sources"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MPL-2.0" }
authors = [{ name = "Bandar AlSwyan" }]
requires-python = ">=3.9"
dependencies = ["arabic-rt>=0.1.4"]
keywords = ["arabic", "nlp", "ocr", "pdf", "text-repair", "bidi", "presentation-forms"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage    = "https://github.com/balswyan/arabic-repair"
Source      = "https://github.com/balswyan/arabic-repair"
"Bug Tracker" = "https://github.com/balswyan/arabic-repair/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/arabic_repair"]

[tool.pytest.ini_options]
testpaths = ["tests"]
